ensure widths align

--- a/style.css
+++ b/style.css
@@ -42,4 +42,5 @@ body {
 
 .links a img {
     height: 30px;
+    width: 30px;
 }
